--- a/writeup.tex
+++ b/writeup.tex
@@ -33,7 +33,7 @@
 
 \section{Background introduction}
 
-We know that capital markets always show characters of non-linearity,and long-term memory is the most important feature of non-linear systems.In fact, many economists believe that asset market is a non-linear system with many uncertainties. Many researches have shown that the conditional volatility of asset prices show long memory or long-range persistence.(ie Although an asset return series has no serial correlation,the ACF of the squared or absolute-valued series of the return always decays at a hyperbolic rate as the lag increases.)We can see the BET stock index  \footnote[1]{The data and Rcode of this paper is downloadable from Yilun's github： \url{https://github.com/lunge111/STA237PROJECT}} as an example. The following plot is the sample ACF of daily returns for BET stock index from November 12,1999 to June 2,2014(Figure 1).
+We know that capital markets always show characters of non-linearity,and long-term memory is the most important feature of non-linear systems.In fact, many economists believe that asset market is a non-linear system with many uncertainties. Many researches have shown that the conditional volatility of asset prices show long memory or long-range persistence.(ie Although an asset return series has no serial correlation,the ACF of the squared or absolute-valued series of the return always decays at a hyperbolic rate as the lag increases.)We can see the BET stock index  \footnote[1]{The data and Rcode of this paper is downloadable from Yilun's github： \url{https://github.com/lunge111/STA237PROJECT}, for usage of functions see readme.md} as an example. The following plot is the sample ACF of daily returns for BET stock index from November 12,1999 to June 2,2014(Figure 1).
 
 \begin{figure}[!htb]
 \centering
